# clinical-data-pipeline

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: clinical_compound_table_pages.yml  collect_clinical_trials.yml  collect_clinical_trials_full.yml  collect_clinical_trials_incremental.yml  ctgov_collect.yml  package_ci.yml  pubchem_table_pages.yml  publish_pypi.yml
docs/: cli.ko.md  cli.md  ctgov.ko.md  ctgov.md  notes.md  overview.ko.md  overview.md  pipeline.ko.md  pipeline.md  production_plan.md  pubchem.ko.md  pubchem.md
scripts/: build_clinical_dataset.py  build_ctgov_table.py  build_pubchem_trials_table.py  build_studies_table.py  collect_ctgov_docs.py  collect_ctgov_docs_first1.py  export_pubchem_trials_dataset.py  fetch_cids.py  fetch_ctgov_docs.py  map_cid_to_nct.py  merge_pubchem_trials_shards.py  merge_trials_incremental.py  mvp_pipeline_lib.py  prefetch_hnid_cids.py  run_mvp_pipeline.py  update_pubchem_trials_history.py  update_studies_history.py
tests/: test_build_ctgov_table_smoke.py  test_build_ctgov_table_unit.py  test_build_pubchem_trials_table_unit.py  test_build_studies_table_unit.py  test_cid_to_nct_smoke.py  test_clinpipe_alias_import_unit.py  test_ctgov_client.py  test_docs_examples.py  test_export_pubchem_trials_dataset_unit.py  test_merge_pubchem_trials_shards_unit.py  test_merge_trials_incremental_unit.py  test_pipeline_smoke.py  test_prefetch_hnid_cids_unit.py  test_pubchem_client.py  test_pubchem_hnid_cids.py  test_update_pubchem_trials_history_unit.py  test_update_studies_history_unit.py
(+45 files in other folders)
