[project]
name = "clinical-data-analyzer"
version = "0.1.0"
description = "Clinical data pipeline integrating PubChem and ClinicalTrials.gov"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
