[project]
name = "clinical-data-analyzer"
version = "0.1.0"
description = "Clinical data pipeline integrating PubChem and ClinicalTrials.gov"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "tenacity>=8.2"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F: 기본 오류, I: import 정렬

[tool.pytest.ini_options]
markers = [
  "smoke: quick smoke tests",
  "network: tests requiring network access",
  "timeout: per-test timeout (pytest-timeout)",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1"
]
